--- a/app/views/merchants/damai.html.erb
+++ b/app/views/merchants/damai.html.erb
@@ -20,7 +20,7 @@
     <% @merchants.each do |merchant| %>
       <div class="col-md-3">
         <div class="thumbnail">
-          <%= link_to image_tag(merchant.logo.url), damai_path %>
+          <%= link_to image_tag(merchant.logo.url), merchant %>
             <div class="caption">
               <h3><%= merchant.restaurant_name %></h3>
               <p><%= merchant.area %></p>
