--- a/app/views/merchants/lintas.html.erb
+++ b/app/views/merchants/lintas.html.erb
@@ -23,7 +23,7 @@
     <% @merchants.each do |merchant| %>
       <div class="col-md-3">
         <div class="thumbnail">
-          <%= link_to image_tag(merchant.logo.url), lintas_path %>
+          <%= link_to image_tag(merchant.logo.url), merchant %>
             <div class="caption">
               <h3><%= merchant.restaurant_name %></h3>
               <p><%= merchant.area %></p>
