--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -133,3 +133,36 @@ hr {
 .content-container {
 	background-color: #ffffff;
 }
+
+.span8 {
+	width: 600px;
+	float: left;
+	p {
+	padding: 15px;
+	margin-top: 10px;
+	margin-bottom: 20px; 
+	margin-right: 0px;
+	border: 1px solid #cecece;
+	border-radius: 5px;
+	}
+}
+
+.span4 {
+	width: 300px;
+	float: right;
+	margin-top: 10px;
+}
+
+.restaurant-menu-button-container {
+text-align: right;
+}
+
+.restaurant-menu-button {
+height: 52px;
+border: 1px solid #cecece;
+}
+
+.checkout-button {
+	margin-left: 5px;
+}
+
