Added Merchant Page Design

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,7 +6,8 @@
       <%= link_to "FAQ", pages_faq_path %> ·
       <%= link_to "Terms", pages_terms_path %> ·
       <%= link_to "Privacy", pages_privacy_path %> ·
-      <%= link_to "Contact", pages_contact_path %>
+      <%= link_to "Contact", pages_contact_path %> ·
+      <%= link_to "Become a driver", pages_contact_path %>
     </div>
 
     <div class="pull-right">
