--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -35,6 +35,7 @@ body {
 }
 
 h2 {
+	font-size: 32px;
 	margin-top: 30px;
 }
 .col-md-3:nth-child(4n+1) {
@@ -128,41 +129,51 @@ hr {
 .thumbnail {
 	padding: 0px;
 	border: 1px solid #cecece;
+	border-radius: 0px;
 }
 
 .content-container {
 	background-color: #ffffff;
+	padding-bottom: 30px;
 }
 
-.span8 {
-	width: 600px;
-	float: left;
+
+div.cart {
+	background: #fff9d9;
+	padding: 12px;
+	font-size: 14px;
+	border-radius: 8px;
+	-moz-border-radius: 8px;
+	-webkit-border-radius: 8px;
+	border: 1px solid #aaa;
+	-webkit-box-shadow: 0px 1px 2px #aaa;
+	-moz-box-shadow: 0px 1px 2px #aaa;
+	box-shadow: 0px 1px 2px #aaa;
+}
+
+div.cart div.title {
+	font-weight: bold;
+	font-size: 16px;
+	padding-bottom: 5px;
+	border-bottom: 1px dotted #bbb;
+}
+
+.restaurant-info {
+	margin-bottom: 30px;
+	border-bottom: 2px solid #333333;
+	h1 {
+	margin-bottom: 0px;
+	}
 	p {
-	padding: 15px;
-	margin-top: 10px;
-	margin-bottom: 20px; 
-	margin-right: 0px;
-	border: 1px solid #cecece;
-	border-radius: 5px;
+	margin-bottom: 10px;
 	}
 }
 
-.span4 {
-	width: 300px;
-	float: right;
-	margin-top: 10px;
+.col-md-8 {
+	padding-left: 0px;
 }
 
-.restaurant-menu-button-container {
-text-align: right;
+.col-md-4 {
+	padding-left: 0px;
+	padding-right: 20px;
 }
-
-.restaurant-menu-button {
-height: 52px;
-border: 1px solid #cecece;
-}
-
-.checkout-button {
-	margin-left: 5px;
-}
-
