--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -1,49 +1,41 @@
 <a href="/">« Back to all restaurants</a>
-<h2><%= @merchant.restaurant_name %></h2>
-
-<div>
-  <div class="span8">
-    <p><strong>Delivery Hours:</strong> 11:00AM - 5:00PM</p>
-  </div>
-  <div class="span4">
-    <div class="restaurant-menu-button-container">
-      <button id="order-cart-button" class="btn restaurant-menu-button">
-        <span id="order-cart-button-text">Order Cart</span>
-        <span id="order-cart-item-count" class="badge badge-important">1</span>
-      </button>
-      <button class="btn btn-success restaurant-menu-button checkout-button">
-        Checkout
-      </button>
-      
-    </div>
-  </div>
+<div class="restaurant-info">
+<h1><strong><%= @merchant.restaurant_name %></strong></h1>
+<p><%= @merchant.address %></p>
 </div>
 
-<div class="center">
-  <div class="row">
+<div class="row container">
+  <div class="col-md-8">
     <% @listings.each do |listing| %>
-      <div class="col-md-3">
-        <div class="thumbnail">
-          <%= image_tag(listing.image.url) %>
-            <div class="caption">
-              <h3><%= listing.name %></h3>
-              <p><%= listing.description %></p>
-              <p><%= number_to_currency(listing.price, :locale => :my) %></p>
+          <div class="col-md-4">
+            <div class="thumbnail">
+              <%= image_tag(listing.image.url) %>
+                <div class="caption center">
+                  <h3><%= listing.name %></h3>
+                  <p><%= listing.description %></p>
+                  <p><%= number_to_currency(listing.price, :locale => :my) %></p>
 
-              <% if (merchant_signed_in?) && (current_merchant == listing.merchant) %>
-                <%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %>
-                <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %>
-              <% else %>
-              
-                <%= link_to 'Add to Order', listing, class: "btn btn-default" %>
-              <% end %>
-            
+                  <% if (merchant_signed_in?) && (current_merchant == listing.merchant) %>
+                    <%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %>
+                    <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %>
+                  <% else %>
+                  
+                    <%= link_to 'Add to Order', listing, class: "btn btn-default" %>
+                  <% end %>
+                
+                </div>
             </div>
-        </div>
-      </div>
+          </div>
     <% end %>
   </div>
+    <div class="col-md-4 cart">
+      <div class="title">
+        <%= @merchant.restaurant_name %>
+      </div>
+    </div>
+</div>
+
   <br>
-  <p>If you spot any incorrect item descriptions, please let us know</p>
-  <br>
+  <p class="center">If you spot any incorrect item descriptions, please let us know</p>
+</div>
 </div>
