--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -1,4 +1,4 @@
-<a href="/">« Back to all restaurants</a>
+<a href="/<%= @merchant.area.downcase %>">« Back to <%= @merchant.area %> Restaurants</a>
 <div class="restaurant-info">
 <h1><strong><%= @merchant.restaurant_name %></strong></h1>
 <p><%= @merchant.address %></p>
@@ -20,7 +20,7 @@
                     <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %>
                   <% else %>
                   
-                    <%= link_to 'Add to Order', listing, class: "btn btn-default" %>
+                    <%= button_to 'Add to Cart', line_items_path(listing_id: listing), remote: true, class: "btn btn-default" %>
                   <% end %>
                 
                 </div>
@@ -31,6 +31,9 @@
     <div class="col-md-4 cart">
       <div class="title">
         <%= @merchant.restaurant_name %>
+      </div>
+      <div id="cart">
+        <%= render @cart %>
       </div>
     </div>
 </div>
