--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -30,7 +30,7 @@
       </p>
       <p>
         Brunche encourages you to review the privacy statements of websites
-        you choose to link to fromDoorDash so that you can understand how those
+        you choose to link to from Brunche so that you can understand how those
         websites collect, use and share your information. Brunche is not
         responsible for the privacy statements or other content on websites
         outside of the Brunche website.
