Further improve cart

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -177,6 +177,7 @@ float: right;
 div.cart div.sub-title {
 margin-top: 15px;
 font-weight: bold;
+border-bottom: 1px dotted #999;
 }
 
 .date-time {
