--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -93,6 +93,6 @@
 </div>
 
   <br>
-  <p class="center">If you spot any incorrect item descriptions, please let us know</p>
+  <p>If you spot any incorrect item descriptions, please let us know</p>
 </div>
 </div>
