--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -18,7 +18,6 @@
       Delivery Fee
 </div>
 
-
 <div class="cart-total">
    <div class="number" id="cart-total">
       <%= number_to_currency(cart.total_order, :locale => :my) %>
@@ -26,4 +25,5 @@
    Total
 </div>
 
-<center><%= button_to 'Empty Cart', cart, data: {confirm: 'Are you sure?'}, method: :delete %></center>
+<%= button_to 'Empty Cart', cart, data: {confirm: 'Are you sure?'}, method: :delete %>
+<%= button_to "Checkout", new_order_path, method: :get %>
