--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -238,3 +238,27 @@ padding-right: 0px;
 	padding-left: 0px;
 	padding-right: 20px;
 }
+
+.contact-information {
+	background-color: #fffdfd;
+	border: 1px solid #d8d8d8;
+	padding: 15px;
+	border-radius: 5px;
+	margin-bottom: 20px;
+	p {
+	margin-bottom: 0px;
+	}
+}
+
+.cart-checkout {
+margin-top: 15px;
+margin-bottom: 0px;
+text-align: center;
+}
+
+.btn-large {
+font-size: 16px;
+padding: 9px 14px;
+line-height: normal;
+width: 100%;
+}
