--- a/app/views/carts/_form.html.erb
+++ b/app/views/carts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@cart) do |f| %>
+<%= form_for(@cart) do |f| %> <!--Trial 2-->
   <% if @cart.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@cart.errors.count, "error") %> prohibited this cart from being saved:</h2>
