--- a/app/views/line_items/create.js.erb
+++ b/app/views/line_items/create.js.erb
@@ -1,3 +1,2 @@
 $('#notice').hide();
-
-$('#cart').html("<%=j render @cart %>");
+$('#cart').html('<%=j render partial: "carts/cart", object: @cart, locals: { merchant: @merchant } %>');
