--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -10,5 +10,6 @@
   <%= @order.pay_type %>
 </p>
 
-<%= link_to 'Edit', edit_order_path(@order) %> |
-<%= link_to 'Back', orders_path %>
+<%= link_to 'Edit', edit_merchant_order_path(@order) %> |
+<!--<%= link_to 'Back', orders_path %>-->
+<%= link_to 'Back', merchant_orders_path %> <!--Trial 1-->
