--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,7 +1,5 @@
-<div class="sub-title" style="margin-bottom: 15px">
-         Order Form 
-      </div>
 
+<!--<%= merchant.inspect %>-->
 	<%= render(cart.line_items) %>
 
 <br>
@@ -25,5 +23,7 @@
    Total
 </div>
 
-<%= button_to 'Empty Cart', cart, data: {confirm: 'Are you sure?'}, method: :delete %>
-<%= button_to "Checkout", new_order_path, method: :get %>
+<div class="cart-checkout">
+<center><%= link_to "Checkout", new_merchant_order_path(merchant), class: "btn btn-primary btn-large" %></center> <!--Trial 1-->
+</div>
+<center><%= button_to 'Reset Your Cart', cart, data: {confirm: 'Are you sure?'}, method: :delete, class: "btn btn-link" %></center>
