--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -18,9 +18,9 @@
                   <% if (merchant_signed_in?) && (current_merchant == listing.merchant) %>
                     <%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %>
                     <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %>
-                  <% else %>
-                  
+                  <% elsif user_signed_in? %>
                     <%= button_to 'Add to Cart', line_items_path(listing_id: listing), remote: true, class: "btn btn-default" %>
+                                     
                   <% end %>
                 
                 </div>
@@ -35,60 +35,17 @@
       
       <div class="date-time">
         <div class="message center">
-          When do you want to eat?
+          What do you want to order?
           <div class="sub-message">
-              Delivery is <span style="color: #000"><u>15 minutes</u> before eat time</span>
+              All prices are <span style="color: #000"><u>tax inclusive</u></span>
             </div>
         </div>
 
-        <div class="control-group ">
-               <div class='col-sm-6'>
-                  <div class="form-group">
-                      <div class='input-group date' id='datetimepicker5' data-date-format="DD/MM/YYYY">
-                          <input type='text' class="form-control" />
-                          <span class="input-group-addon"><span class="glyphicon glyphicon-time"></span>
-                          </span>
-                      </div>
-                  </div>
-              </div>
-
-            <div class='col-sm-6'>
-                <div class="form-group">
-                    <div class='input-group date' id='datetimepicker4'>
-                        <input type='text' class="form-control" />
-                        <span class="input-group-addon"><span class="glyphicon glyphicon-time"></span>
-                        </span>
-                    </div>
-                </div>
-            </div>
-
-          
-
-      <p>Please allow 45 minutes for ASAP orders<p>
-            
-              <script type="text/javascript">
-                  $(function () {
-                      $('#datetimepicker4').datetimepicker({
-                          pickDate: false
-                      });
-                  });
-              </script>
-
-              <script type="text/javascript">
-                  $(function () {
-                      $('#datetimepicker5').datetimepicker({
-                          pickTime: false
-                      });
-                  });
-              </script>
-            </div>
-            
-
-      </div>
+        
 
     <div id="cart">
-        <%= render @cart %>
-      </div>
+      <%= render partial: "carts/cart", object: @cart, locals: { merchant: @merchant } %>
+    </div>
     </div>
 </div>
 
