--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,5 +1,51 @@
-<h1>New order</h1>
+<h1><%= @merchant.restaurant_name %> - Checkout</h1>
+<div class="row container">
+  <div class="col-md-8">
+  	<h5><strong>Contact Information</strong></h5>
+  	<div class="contact-information">
+  	<p><strong><%= current_user.first_name %> <%= current_user.last_name %></strong></p>
+  	<p><%= current_user.phone_number %></p>
+  	<p><%= current_user.email %></p>
+  </div>
+  	<%= render 'form' %>
+  </div>
+    <div class="col-md-4 cart">
+      <div class="title">
+        <center><%= @merchant.restaurant_name %></center>
+      </div>
+      
+      <div class="date-time">
+        <div class="message center">
+          Please Review Your Order
+          	<div class="sub-message">
+              All prices are <span style="color: #000"><u>tax inclusive</u></span>
+            </div>
+        </div>
+       	
+        <%= render(@cart.line_items) %>
+        <br>
+		<div class="cart-row">
+		   <div class="item-price">
+		      <%= number_to_currency(@cart.total_price, :locale => :my) %>
+		   </div>
+		      Food/Beverage total
+		</div>
+		<div class="cart-row">
+		   <div class="item-price">
+		      <%= number_to_currency(@cart.delivery_fee, :locale => :my) %>
+		   </div>
+		      Delivery Fee
+		</div>
 
-<%= render 'form' %>
+     	<div class="cart-total">
+   			<div class="number" id="cart-total">
+      			<%= number_to_currency(@cart.total_order, :locale => :my) %>
+   			</div>
+   				Total
+		</div>
+     </div>
+ </div>
+</div>
 
-<%= link_to 'Back', orders_path %>
+
+
