--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,23 +16,13 @@
       <ul class="nav navbar-nav navbar-right">
        
         <% if merchant_signed_in? %>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">My Account <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
                 <li><%= link_to "Manage Menu", seller_path %></li>
                 <li><%= link_to "Edit Account", edit_merchant_registration_path %></li>
                 <li><%= link_to "Log Out", destroy_merchant_session_path, method: :delete %></li>
-              </ul>
-          </li>
         <% elsif user_signed_in? %>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">My Account <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><%= link_to "Manage Delivery Locations", address_path %></li>
+                <li><%= link_to "Purchases", purchases_path %></li>
                 <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
                 <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
-              </ul>
-          </li>
         <% else %>
             <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sign Up <span class="caret"></span></a>
