--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,17 +2,26 @@
 
 <table class="table table-striped table-bordered">
   <tr>
+    <th>Order Date</th>
+    <th>Customer Name</th>
+    <th>Restaurant Name</th>
     <th>Delivery Address</th>
+    <th>Delievery Date</th>
+    <th>Delivery Time</th>   
     <th>Payment Type</th>
     <th>Action</th>
   </tr>
 
   <% @orders.each do |order| %>
     <tr>
+      <td><%= order.created_at.strftime("%B %-d, %Y") %></td>
+      <td><%= order.first_name %> <%= order.last_name %></td>
+      <td><%= order.restaurant_name %></td>
       <td><%= order.address %></td>
+      <td><%= order.delivery_date %></td>
+      <td><%= order.delivery_time %></td>
       <td><%= order.pay_type %></td>
       <td>
-
         <div class="btn-group">
           <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
             Action <span class="caret"></span>
