--- a/app/views/orders/sales.html.erb
+++ b/app/views/orders/sales.html.erb
@@ -14,6 +14,7 @@
       <td><%= order.address %></td>      
       <td><%= order.delivery_date %></td>
       <td><%= order.delivery_time %></td>
+       <td><%= link_to "View Order", order, class: "btn btn-default" %></td>
     </tr>
   <% end %>
 </table>
