--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,15 +1,20 @@
-<p id="notice"><%= notice %></p>
+<table class="table table-striped table-bordered">
+  <tr>
+  	<th>Image</th>
+    <th>Ordered Item</th>
+    <th>Quantity</th>
+    <th>Price</th>   
+  </tr>
 
-<p>
-  <strong>Address:</strong>
-  <%= @order.address %>
-</p>
+  <% @line_items.each do |line_item| %>
+    <tr>
+      <td><%= image_tag line_item.listing.image.url(:medium) %></td>
+      <td><%= line_item.listing.name %></td>
+      <td><%= line_item.quantity %></td>
+      <td><%= line_item.total_price %></td>
+               
+    </tr>
+  <% end %>
+</table>
 
-<p>
-  <strong>Pay type:</strong>
-  <%= @order.pay_type %>
-</p>
-
-<%= link_to 'Edit', edit_merchant_order_path(@order) %> |
-<!--<%= link_to 'Back', orders_path %>-->
-<%= link_to 'Back', merchant_orders_path %> <!--Trial 1-->
+<%= link_to 'Back', orders_path %> 
