--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,8 +14,17 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
+
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Restaurant <span class="caret"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                      <li><%= link_to "Lintas", lintas_path %></li>
+                      <li><%= link_to "Damai", damai_path %></li>
+                    </ul>
+                </li>
        
         <% if merchant_signed_in? %>
+                <li><%= link_to "Order List", sales_path %></li>
                 <li><%= link_to "Manage Menu", seller_path %></li>
                 <li><%= link_to "Edit Account", edit_merchant_registration_path %></li>
                 <li><%= link_to "Log Out", destroy_merchant_session_path, method: :delete %></li>
