--- a/app/views/merchants/lintas.html.erb
+++ b/app/views/merchants/lintas.html.erb
@@ -1,18 +1,7 @@
-<div class="btn-group">
-  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-    Change Restaurant Area     <span class="caret"></span>
-  </button>
-    <ul class="dropdown-menu" role="menu">
-      <li><%= link_to "Lintas", lintas_path, class: "btn btn-link" %></li>
-      <li><%= link_to "Damai", damai_path, class: "btn btn-link" %></li>
-    </ul>
-</div>
-      
-
 <div class="center">
   <div>
     <h1>Pick Your Restaurant</h1>
-    <h4>First Delivery Free. No Minimum Order Size.</h4>
+    <h4>The Best From Lintas. No Minimum Order Size.</h4>
   </div>
   <div class="delivery-time">
     <p>Delivery Hours: 11:00AM - 5:00PM</p>
