--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,25 +2,27 @@
 
 <table class="table table-striped table-bordered">
   <tr>
-    <th>Order Date</th>
-    <th>Customer Name</th>
-    <th>Restaurant Name</th>
-    <th>Delivery Address</th>
-    <th>Delievery Date</th>
-    <th>Delivery Time</th>   
+    <th>Order No.</th>
+    <th>Date</th>
+    <th>Customer</th>
+    <th>Address</th>
+    <th>Delivery</th>
     <th>Payment Type</th>
-    <th>Action</th>
+    <th>Restaurant Name</th>
+    <th>Total (RM)</th>
+    <th></th>
   </tr>
 
   <% @orders.each do |order| %>
     <tr>
+      <td>BC10<%= order.id %></td>
       <td><%= order.created_at.strftime("%B %-d, %Y") %></td>
-      <td><%= order.first_name %> <%= order.last_name %></td>
-      <td><%= order.restaurant_name %></td>
+      <td><%= order.user.first_name %> <%= order.user.last_name %> <%= order.user.phone_number %></td>
       <td><%= order.address %></td>
-      <td><%= order.delivery_date %></td>
-      <td><%= order.delivery_time %></td>
+      <td><%= order.delivery_time %> <%= order.delivery_date %></td>
       <td><%= order.pay_type %></td>
+      <td><%= order.merchant.restaurant_name %></td>
+      <td></td>
       <td>
         <div class="btn-group">
           <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
