--- a/app/views/orders/sales.html.erb
+++ b/app/views/orders/sales.html.erb
@@ -1,20 +1,27 @@
+<h1>Order List</h1>
+
 <table class="table table-striped table-bordered">
   <tr>
-    <th>Order Date</th>
+    <th>Order No.</th>
+    <th>Date</th>
     <th>Customer Name</th>
-    <th>Delivery Address</th>
-    <th>Delievery Date</th>
-    <th>Delivery Time</th>   
+    <th>Address</th>
+    <th>Delivery Date</th>
+    <th>Delivery Time</th>
+    <th>Total (RM)</th>
+    <th></th> 
   </tr>
 
   <% @orders.each do |order| %>
     <tr>
+      <td>BC10<%= order.id %></td>
       <td><%= order.created_at.strftime("%B %-d, %Y") %></td>
       <td><%= order.first_name %> <%= order.last_name %></td>
       <td><%= order.address %></td>      
       <td><%= order.delivery_date %></td>
       <td><%= order.delivery_time %></td>
-       <td><%= link_to "View Order", order, class: "btn btn-default" %></td>
+      <td></td>
+      <td><%= link_to "View Order", order, class: "btn btn-default" %></td>
     </tr>
   <% end %>
 </table>
