--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,15 +1,29 @@
+<% if user_signed_in? %>
+  <%= link_to '« Back to Purchase History', purchases_path %>
+<% elsif merchant_signed_in? %>
+  <%= link_to '« Back to Order List', sales_path %>
+<% else %>
+<% end %>
+
+<div class="restaurant-info">
+  <h1>Order No. BC10<%= @order.id %></h1>
+  <p><%= @order.address %> - <b><%= @order.delivery_date %>, <%= @order.delivery_time %></b></p>
+</div>
+
 <table class="table table-striped table-bordered">
   <tr>
-  	<th>Image</th>
+    <th>Image</th>
     <th>Ordered Item</th>
+    <th>Description</th>
     <th>Quantity</th>
-    <th>Price</th>   
+    <th>Price (RM)</th>   
   </tr>
 
   <% @line_items.each do |line_item| %>
     <tr>
       <td><%= image_tag line_item.listing.image.url(:medium) %></td>
       <td><%= line_item.listing.name %></td>
+      <td><%= line_item.listing.description %></td>
       <td><%= line_item.quantity %></td>
       <td><%= line_item.total_price %></td>
                
@@ -17,4 +31,4 @@
   <% end %>
 </table>
 
-<%= link_to 'Back', orders_path %> 
+ 
