--- a/app/views/orders/purchases.html.erb
+++ b/app/views/orders/purchases.html.erb
@@ -21,7 +21,7 @@
       <td><%= order.delivery_date %></td>
       <td><%= order.delivery_time %></td>
       <td><%= order.merchant.restaurant_name %></td>
-      <td></td>
+      <td><%= order.total_order %></td>
       <td><%= link_to "View Purchase", order, class: "btn btn-default" %></td>
       
     </tr>
