--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -22,7 +22,7 @@
       <td><%= order.delivery_time %> <%= order.delivery_date %></td>
       <td><%= order.pay_type %></td>
       <td><%= order.merchant.restaurant_name %></td>
-      <td></td>
+      <td><%= order.total_order %></td>
       <td>
         <div class="btn-group">
           <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
