--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,7 +16,7 @@
       <ul class="nav navbar-nav navbar-right">
 
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Restaurant <span class="caret"></span></a>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Browse Restaurants <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
                       <li><%= link_to "Lintas", lintas_path %></li>
                       <li><%= link_to "Damai", damai_path %></li>
@@ -24,35 +24,34 @@
                 </li>
 
         <% if admin_signed_in? %>
-                <li><%= link_to "Received Orders", orders_path %></li>
-                <li><%= link_to "Create Merchant", new_merchant_registration_path %></li>
-                <li><%= link_to "Edit Account", edit_admin_registration_path %></li>
+                <li><%= link_to "View Orders", orders_path %></li>
+                <li><%= link_to "Create Restaurant", new_merchant_registration_path %></li>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Hello Admin! <span class="caret"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                      <li><%= link_to "Edit Account", edit_admin_registration_path %></li>
                 <li><%= link_to "Log Out", destroy_admin_session_path, method: :delete %></li>
+                    </ul>
+                </li>             
 
         <% elsif merchant_signed_in? %>
-                <li><%= link_to "Order List", sales_path %></li>
+                <li><%= link_to "Received Orders", sales_path %></li>
                 <li><%= link_to "Manage Menu", seller_path %></li>
                 <li><%= link_to "Edit Account", edit_merchant_registration_path %></li>
                 <li><%= link_to "Log Out", destroy_merchant_session_path, method: :delete %></li>
         <% elsif user_signed_in? %>
                 <li><%= link_to "Purchases", purchases_path %></li>
                 <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
-                <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>       
+                <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>       
         <% else %>
-            <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sign Up <span class="caret"></span></a>
+                <li><%= link_to "Register", new_user_registration_path %></li>
+                <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login <span class="caret"></span></a>
                           <ul class="dropdown-menu" role="menu">
-                            <li><%= link_to "User", new_user_registration_path %></li>
-                            <li><%= link_to "Merchant", new_merchant_registration_path %></li>
+                            <li><%= link_to "Member", new_user_session_path %></li>
+                            <li><%= link_to "Restaurant", new_merchant_session_path %></li>
                           </ul>
-            </li>
-            <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sign In <span class="caret"></span></a>
-                          <ul class="dropdown-menu" role="menu">
-                            <li><%= link_to "User", new_user_session_path %></li>
-                            <li><%= link_to "Merchant", new_merchant_session_path %></li>
-                          </ul>
-            </li>
+                </li>
         <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
