--- a/app/views/merchants/show.html.erb
+++ b/app/views/merchants/show.html.erb
@@ -20,7 +20,10 @@
                     <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %>
                   <% elsif user_signed_in? %>
                     <%= button_to 'Add to Cart', line_items_path(listing_id: listing), remote: true, class: "btn btn-default" %>
-                                   
+                  <% elsif admin_signed_in? %>
+                    <%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %>
+                    <%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-link" %> 
+                  <% else %>               
                   <% end %>
                 
                 </div>
