--- a/app/views/orders/purchases.html.erb
+++ b/app/views/orders/purchases.html.erb
@@ -8,7 +8,7 @@
     <th>Delivery Date</th>
     <th>Delivery Time</th>
     <th>Restaurant Name</th>
-    <th>Total (RM)</th>
+    <th>Total</th>
     <th></th>
            
   </tr>
@@ -21,7 +21,7 @@
       <td><%= order.delivery_date %></td>
       <td><%= order.delivery_time %></td>
       <td><%= order.merchant.restaurant_name %></td>
-      <td><%= order.total_order %></td>
+      <td><%= number_to_currency(order.total_order, :locale => :my) %></td>
       <td><%= link_to "View Purchase", order, class: "btn btn-default" %></td>
       
     </tr>
